<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">CSE_5236_App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_title">Login</string>
    <string name="login_username">Please enter your username</string>
    <string name="login_password">Please enter your password</string>
    <string name="login_button">Login</string>
    <string name="login_cancel">Cancel</string>
    <string name="login_new_user">New User</string>
    <string name="dialog_login_fail">Your username or password is incorrect</string>
    <string name="dialog_login_fail_title">Error!</string>
    <string name="dialog_ok_button">OK</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="saved_username_key">username</string>
    <string name="preference_file_key">preferences</string>
    <string name="User_profile_description">User Description</string>
    <string name="del_button">Delete Profile</string>
    <string name="change_pass_button">Change Password</string>
    <string name="change_pic_button">Change Picture</string>
    <string name="change_desc_button">Change Desc</string>
    <string name="profile_uri_default" tools:ignore="ExtraTranslation,TypographyDashes">https://firebasestorage.googleapis.com/v0/b/cse5236app.appspot.com/o/defaultimage.png?alt=media&amp;token=6544a665-4305-4679-871d-69a9ffc7a718</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_new_pass">Please enter a new password</string>
    <string name="dialog_new_desc">Please enter a new description</string>
    <string name="no_description">Please enter a description using the button below!</string>
    <string name="error_loading_data">There was an error loading your data…</string>
    <string name="upload_photo">Upload a photo</string>
    <string name="saved_password_key">password</string>
    <string name="saved_description_key">desc</string>
    <string name="saved_img_link">image</string>

</resources>